--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,15 @@
-.divider-text {
+@media only screen and (min-width: 325px) and (max-width: 815px) {
+
+
+
+/* .divider-text {
     position: relative;
     text-align: center;
     margin-top: 15px;
     margin-bottom: 15px;
-}
+} */
 
-.divider-text span {
+/* .divider-text span {
     padding: 7px;
     font-size: 12px;
     position: relative;
@@ -20,14 +24,95 @@
     top: 55%;
     left: 0;
     z-index: 1;
+} */
+
+.createAccount {
+    color: rgb(253, 253, 255);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
+    
 }
 
-.btn-facebook {
-    background-color: #405D9D;
-    color: #fff;
+.container {
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+
 }
 
-.btn-twitter {
-    background-color: #42AEEC;
-    color: #fff;
+#background {
+    width: 100%;
+    height: 100%;
+    background-repeat: repeat-y;
+    background-size: cover;
+}
+
+body {
+    margin: 0;
+    padding: 0;  
+}
+
+#accountText {
+
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
+}
+
+
+.textBoxes {
+
+  
+    display: block;
+    margin: 0 auto;
+    width: 180px;
+    height: 30px;
+    margin-bottom: 5px;
+    border-style: ridge;
+    border-color: rgb(230, 229, 229);
+    border-radius: 1px;
+    border-width: 1px;
+    font-size: small;
+}
+
+#footer {
+
+    text-align: center;
+    font-family: sans-serif;
+}
+
+#submitButton {
+
+    background-color: rgb(151, 201, 136);
+    display: block;
+    margin: 0 auto;
+    width: 100px;
+    height: 30px;
+    color: white;
+    border-style: solid;
+    border-radius: 20px;
+    margin-top: 5px;
+    border-width: 0;
+    cursor: pointer;
+    padding: 0
+   
+
+}
+
+#logIn {
+
+    text-decoration: none;
+    color: rgb(151, 201, 136);
+    font-size: small;
+}
+
+#dcStocks {
+
+    text-align: center;
+    color: white;
+    font-family: Arial;
+    font-size: small;
+    font-weight: lighter;
+}
+
 }
